--- a/Tehilim/AndroidManifest.xml
+++ b/Tehilim/AndroidManifest.xml
@@ -9,15 +9,15 @@
         android:targetSdkVersion="19" />
 
     <application
-        android:supportsRtl="true"
+        android:name="com.karriapps.tehilimlibrary.utils.App"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher_frame"
         android:label="@string/app_name"
-        android:name="com.karriapps.tehilimlibrary.utils.App"
+        android:supportsRtl="true"
         android:theme="@style/AppBaseTheme" >
-        
         <activity
             android:name="com.karriapps.tehilimlibrary.MainActivity"
+            android:configChanges="locale|orientation"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,8 +25,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity android:name="com.karriapps.tehilimlibrary.utils.App" />
+        <activity
+            android:name="com.karriapps.tehilimlibrary.PreferencesActivity"
+            android:label="@string/action_settings" 
+            android:configChanges="locale|orientation"
+            />
     </application>
 
 </manifest>
