--- a/Tehilim/AndroidManifest.xml
+++ b/Tehilim/AndroidManifest.xml
@@ -13,8 +13,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher_frame"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppBaseTheme" >
+        android:supportsRtl="true" >
         <activity
             android:name="com.karriapps.tehilimlibrary.MainActivity"
             android:configChanges="locale|orientation"
@@ -25,12 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.karriapps.tehilimlibrary.utils.App" />
         <activity
             android:name="com.karriapps.tehilimlibrary.PreferencesActivity"
-            android:label="@string/action_settings" 
             android:configChanges="locale|orientation"
-            />
+            android:label="@string/action_settings" />
     </application>
 
 </manifest>
