--- a/tehilim_main/build.gradle
+++ b/tehilim_main/build.gradle
@@ -5,10 +5,10 @@ android {
     buildToolsVersion '19.0.3'
 
     defaultConfig {
-        minSdkVersion 8
+        minSdkVersion 9
         targetSdkVersion 19
-        versionCode 1
-        versionName "1.0"
+        versionCode 13
+        versionName "3.0.0"
     }
     buildTypes {
         release {
@@ -22,4 +22,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:19.+'
     compile project(':tehilimlibrary')
+    compile "com.google.android.gms:play-services:5.+"
 }
