--- a/tehilim_main/src/main/AndroidManifest.xml
+++ b/tehilim_main/src/main/AndroidManifest.xml
@@ -1,31 +1,55 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.karriapps.easytehilim"
-    android:installLocation="auto"
-    android:versionCode="1"
-    android:versionName="0.0.1">
+    package="com.karriapps.tehilim"
+    android:installLocation="auto">
 
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <permission
+        android:name="com.karriapps.tehilim.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.karriapps.tehilim.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <application
+        android:name="com.karriapps.tehilim.tehilimlibrary.utils.App"
         android:allowBackup="true"
-        android:label="@string/app_name"
         android:icon="@drawable/ic_launcher_dark"
-        android:name=".tehilimlibrary.utils.App">
+        android:label="@string/app_name">
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".tehilimlibrary.MainActivity"
-            android:icon="@drawable/ic_launcher_frame"
-            android:configChanges="locale|orientation">
+            android:name="com.karriapps.tehilim.tehilimlibrary.MainActivity"
+            android:configChanges="locale|orientation"
+            android:icon="@drawable/ic_launcher_frame">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".tehilimlibrary.PreferencesActivity"
+            android:name="com.karriapps.tehilim.tehilimlibrary.PreferencesActivity"
             android:icon="@drawable/ic_launcher_frame" />
+
+        <receiver
+            android:name="com.karriapps.tehilim.tehilimlibrary.gcm.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="com.karriapps.tehilim" />
+            </intent-filter>
+        </receiver>
+        <service android:name="com.karriapps.tehilim.tehilimlibrary.gcm.GcmIntentService" />
+
     </application>
 
 </manifest>
