--- a/tehilimlibrary/build.gradle
+++ b/tehilimlibrary/build.gradle
@@ -3,12 +3,11 @@ apply plugin: 'android-library'
 android {
     compileSdkVersion 19
     buildToolsVersion '19.0.3'
-
     defaultConfig {
-        minSdkVersion 8
+        minSdkVersion 9
         targetSdkVersion 19
         versionCode 1
-        versionName "1.0"
+        versionName '1.0'
     }
     buildTypes {
         release {
@@ -16,12 +15,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:19.+'
-    compile 'com.android.support:appcompat-v7:+'
     compile 'joda-time:joda-time:2.3'
     compile project(':Zmanim')
+    compile files('libs/appbrain-applift-sdk-v10.01.jar')
+    compile project(':helpshiftsdkandroid')
+    compile "com.google.android.gms:play-services:5.+"
 }
