--- a/Zmanim/build.gradle
+++ b/Zmanim/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'java'
+
+sourceCompatibility = JavaVersion.VERSION_1_6
+targetCompatibility = JavaVersion.VERSION_1_6
 sourceSets {
     main.java.srcDirs = ['src']
 }
