--- a/tehilim_main/build.gradle
+++ b/tehilim_main/build.gradle
@@ -7,9 +7,15 @@ android {
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 19
-        versionCode 13
-        versionName "3.0.0"
+        versionCode 14
+        versionName "3.0.1"
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
     buildTypes {
         release {
             runProguard false
