--- a/tehilim_main/build.gradle
+++ b/tehilim_main/build.gradle
@@ -3,30 +3,29 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 19
     buildToolsVersion '19.1.0'
-
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 19
-        versionCode 14
-        versionName "3.0.1"
+        versionCode 15
+        versionName '3.0.2'
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
-
     buildTypes {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:19.+'
     compile project(':tehilimlibrary')
-    compile "com.google.android.gms:play-services:5.+"
+    compile 'com.google.android.gms:play-services:5.0.89'
 }
