--- a/tehilimlibrary/build.gradle
+++ b/tehilimlibrary/build.gradle
@@ -20,11 +20,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:19.+'
     compile 'joda-time:joda-time:2.3'
     compile project(':Zmanim')
     compile files('libs/appbrain-applift-sdk-v10.01.jar')
     compile project(':helpshiftsdkandroid')
-    compile "com.google.android.gms:play-services:5.+"
+    compile 'com.google.android.gms:play-services:5.0.89'
+    compile 'com.google.code.gson:gson:2.2.+'
 }
