--- a/helpshiftsdkandroid/build.gradle
+++ b/helpshiftsdkandroid/build.gradle
@@ -1,17 +1,16 @@
 apply plugin: 'android-library'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion '19.1.0'
+    compileSdkVersion 21
+    buildToolsVersion '21.1.2'
 
     defaultConfig {
-        packageName "com.helpshift"
         minSdkVersion 9
     }
 
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
