--- a/tehilimlibrary/build.gradle
+++ b/tehilimlibrary/build.gradle
@@ -1,17 +1,16 @@
 apply plugin: 'android-library'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion '19.1.0'
+    compileSdkVersion 21
+    buildToolsVersion '21.1.2'
     defaultConfig {
         minSdkVersion 9
-        targetSdkVersion 19
         versionCode 1
         versionName '1.0'
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
@@ -21,11 +20,15 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:19.+'
+    compile 'com.android.support:appcompat-v7:21.+'
     compile 'joda-time:joda-time:2.3'
     compile project(':Zmanim')
     compile files('libs/appbrain-applift-sdk-v10.01.jar')
     compile project(':helpshiftsdkandroid')
-    compile 'com.google.android.gms:play-services:5.0.89'
+    compile 'com.google.android.gms:play-services:6.+'
     compile 'com.google.code.gson:gson:2.2.+'
+    compile 'com.afollestad:material-dialogs:0.6.3.3'
+    compile 'com.github.navasmdc:MaterialDesign:1.+@aar'
+    compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
+    compile files('libs/nineoldandroids-2.4.0.jar')
 }
