--- a/tehilimlibrary/build.gradle
+++ b/tehilimlibrary/build.gradle
@@ -16,6 +16,9 @@ android {
     }
     productFlavors {
     }
+    dexOptions {
+        preDexLibraries = false
+    }
 }
 
 dependencies {
@@ -30,5 +33,6 @@ dependencies {
     compile 'com.afollestad:material-dialogs:0.6.3.3'
     compile 'com.github.navasmdc:MaterialDesign:1.+@aar'
     compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
+
     compile files('libs/nineoldandroids-2.4.0.jar')
 }
