--- a/tehilim_main/build.gradle
+++ b/tehilim_main/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion '21.1.2'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
     defaultConfig {
-        minSdkVersion 9
-        targetSdkVersion 19
+        minSdkVersion 21
+        targetSdkVersion 28
         versionCode 18
         versionName '3.1'
     }
@@ -24,6 +24,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':tehilimlibrary')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':tehilimlibrary')
 }
