--- a/tehilimlibrary/build.gradle
+++ b/tehilimlibrary/build.gradle
@@ -1,10 +1,10 @@
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion '21.1.2'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
     defaultConfig {
-        minSdkVersion 9
+        minSdkVersion 21
         versionCode 1
         versionName '1.0'
     }
@@ -22,17 +22,20 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:21.+'
-    compile 'joda-time:joda-time:2.3'
-    compile project(':Zmanim')
-    compile files('libs/appbrain-applift-sdk-v10.01.jar')
-    compile project(':helpshiftsdkandroid')
-    compile 'com.google.android.gms:play-services:6.+'
-    compile 'com.google.code.gson:gson:2.2.+'
-    compile 'com.afollestad:material-dialogs:0.6.3.3'
-    compile 'com.github.navasmdc:MaterialDesign:1.+@aar'
-    compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
-
-    compile files('libs/nineoldandroids-2.4.0.jar')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'joda-time:joda-time:2.3'
+    implementation project(':Zmanim')
+    //implementation files('libs/appbrain-applift-sdk-v10.01.jar')
+    implementation 'com.helpshift:android-helpshift-aar:7.3.0'
+    //implementation 'com.google.android.gms:play-services:12.0.1'
+    //implementation 'com.google.android.gms:play-services-ads:17.1.2'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'com.google.firebase:firebase-auth:16.1.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.afollestad.material-dialogs:core:2.0.0-rc3'
+    implementation 'com.github.navasmdc:MaterialDesign:1.5@aar'
+    implementation 'com.github.ksoichiro:android-observablescrollview:1.5.0'
+    implementation files('libs/nineoldandroids-2.4.0.jar')
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.google.android.material:material:1.0.0'
 }
